styles.css
:root {
  font-family: Georgia, "Times New Roman", Times, serif;
  font-size: 16px;
}

* {
  box-sizing: border-box;
  box-sizing: inherit;
  margin: 0;
}

.container {
  display: grid;
  grid-template: 100px 1fr / 800px 320px;
  background-color: #f1f2f5;
  height: 100vh;
  width: max-content;
  margin: 0 auto;
  border-left: 1px solid lightgray;
  border-right: 1px solid lightgray;
}

.header {
  grid-area: 1 / 1 / 2 / 2;
  padding: 20px 32px;
  border-bottom: 1px solid lightgray;
}

.main-content {
  grid-area: 2 / 1 / 3 / 2;
  padding: 20px 32px;
}

.registration {
  grid-area: 1 / 2 / 3 / 3;
  padding: 24px;
  border-left: 1px solid lightgray;
  display: grid;
  grid-template-rows: 1fr;
  grid-auto-rows: 1fr;
}

.background-image {
  position: relative;
  background-image:
    linear-gradient(hsla(143, 21%, 15%, 0.3), hsla(143, 21%, 15%, 0.3)),
    url(assets/library-bg-img.jpg);
  background-size: auto;
  background-position: center;
}

.caption {
  display: inline-block;
  transform: rotate(90deg);
  max-width: 210px;
  height: max-content;
  position: absolute;
  bottom: 100px;
  left: -90px;
  width: 100%;
  color: white;
  font-weight: 300;
  font-size: 0.9rem;
  padding: 12px;
  & a {
    color: white;
  }
}

.registration button {
  grid-area: 1 / 1 / 2 / 2;
  width: auto;
  height: max-content;
  font-size: 1rem;
  font-weight: 500;
  color: white;
  background-color: olivedrab;
  padding: 12px 24px;
  border: 0;
  border-radius: 8px;
}

h1,
h2 {
  font-weight: 700;
  color: darkslategray;
}

/* styling for book card */
.bookshelf {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
  gap: 16px;
}

.book.card {
  border: 1px solid lightgray;
  border-radius: 12px;
  background-color: white;
  box-shadow: 2px 2px 6px 2px hsl(0, 2%, 18%, 0.3);
  display: grid;
  grid-template: 32px 24px 40px / 64px 64px;
  gap: 12px;
  padding: 12px 16px;
}

.book.title {
  grid-area: 1 / 1 / 2 / 3;
  font-size: 1.3rem;
  font-weight: bold;
}

.book.author {
  grid-area: 2 / 1 / 3 / 3;
  font-size: 1.1rem;
  font-weight: medium;
  color: gray;
}

.book.pages {
  grid-area: 3 / 1 / 4 / 2;
  font-size: 1rem;
  font-weight: medium;
  border: 1px solid whitesmoke;
  border-radius: 4px;
  color: gray;
}

.book.read {
  grid-area: 3 / 2 / 4 / 3;
  font-size: 1rem;
  font-weight: medium;
  border: 1px solid gray;
  border-radius: 4px;
  color: white;
  background-color: lightblue;
}

